--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
+  name             : "Truong-Vinh Hoang"
+  avatar           : "photo_2019comp.png"
+  bio              : "Researcher in Applied mathematics and Computational engineering"
+  location         : "Germany"
+  employer         : "Chair of Mathematics for uncertainty quantification, Deparment of Mathematics, RWTH-Aachen University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=_308zMUAAAAJ&hl=en"
   email            :
