--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Truong-Vinh Hoang"
-  avatar           : "photo_2019comp.png"
+  avatar           : "photo_2019comp.jpg"
   bio              : "Researcher in Applied mathematics and Computational engineering"
   location         : "Germany"
   employer         : "RWTH-Aachen University"#"Chair of Mathematics for uncertainty quantification, Deparment of Mathematics, RWTH-Aachen University"
