--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ author:
   employer         : "RWTH-Aachen University"#"Chair of Mathematics for uncertainty quantification, Deparment of Mathematics, RWTH-Aachen University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=_308zMUAAAAJ&hl=en"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  email            : hoang@uq.rwth-aachen.de
+  researchgate     :  https://www.researchgate.net/profile/Truong-Vinh-Hoang
   uri              :
   bitbucket        :
   codepen          :
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
