--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 # main links links
 main:
-  #- title: "Publications"
-  #  url: /publications/
+  - title: "CV"
+    url: /cv/
+  - title: "Publications"
+    url: /publications/
 
   #- title: "Talks"
   #  url: /talks/    
@@ -14,9 +16,6 @@ main:
         
   #- title: "Blog Posts"
   #  url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
     
   #- title: "Guide"
   #  url: /markdown/
